--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,3 +3,14 @@
 .btn-block {
     width: 100%;
 }
+
+footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+}
+
+.image_presentation {
+    width: 15%;
+}
