--- a/assets/css/view_image.css
+++ b/assets/css/view_image.css
@@ -10,3 +10,11 @@
 .center_background {
     display: flex;
 }
+
+.card-title,
+p {
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+}
